Bug 1064890 - Initialze the date cache cleaner for content processes forked from b2g. r=khuey, a=lmandel